--- a/search.html
+++ b/search.html
@@ -27,38 +27,75 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-sm-2"><img src="tree.jpg" class="p1" alt="Bearcat Image"></div>
-            <div class="col-sm-2"><img src="tree.jpg" class="p1" alt="Bearcat Image"></div>
-            <div class="col-sm-2"><img src="tree.jpg" class="p1" alt="Bearcat Image"></div>
-            <div class="col-sm-2"><img src="tree.jpg" class="p1" alt="Bearcat Image"></div>
-            <div class="col-sm-2"><img src="tree.jpg" class="p1" alt="Bearcat Image"></div>
-            <div class="col-sm-2"><img src="tree.jpg" class="p1" alt="Bearcat Image"></div>
+            <div class="col-sm-2"><img src="tree.jpg" id="img0" class="p1" onclick="check(0)" alt="Tree Image"></div>
+            <div class="col-sm-2"><img src="tree.jpg" id="img1" class="p1" onclick="check(1)" alt="Tree Image"></div>
+            <div class="col-sm-2"><img src="tree.jpg" id="img2" class="p1" onclick="check(2)" alt="Tree Image"></div>
+            <div class="col-sm-2"><img src="tree.jpg" id="img3" class="p1" onclick="check(3)" alt="Tree Image"></div>
+            <div class="col-sm-2"><img src="tree.jpg" id="img4" class="p1" onclick="check(4)" alt="Tree Image"></div>
+            <div class="col-sm-2"><img src="tree.jpg" id="img5" class="p1" onclick="check(5)" alt="Tree Image"></div>
         </div>
         <div class="row">
-            <div class="col-sm-2"><img src="tree.jpg" class="p1" alt="Bearcat Image"></div>
-            <div class="col-sm-2"><img src="tree.jpg" class="p1" alt="Bearcat Image"></div>
-            <div class="col-sm-2"><img src="tree.jpg" class="p1" alt="Bearcat Image"></div>
-            <div class="col-sm-2"><img src="tree.jpg" class="p1" alt="Bearcat Image"></div>
-            <div class="col-sm-2"><img src="tree.jpg" class="p1" alt="Bearcat Image"></div>
-            <div class="col-sm-2"><img src="tree.jpg" class="p1" alt="Bearcat Image"></div>
+            <div class="col-sm-2"><img src="tree.jpg" id="img6" class="p1" onclick="check(6)" alt="Tree Image"></div>
+            <div class="col-sm-2"><img src="tree.jpg" id="img7" class="p1" onclick="check(7)" alt="Tree Image"></div>
+            <div class="col-sm-2"><img src="tree.jpg" id="img8" class="p1" onclick="check(8)" alt="Tree Image"></div>
+            <div class="col-sm-2"><img src="tree.jpg" id="img9" class="p1" onclick="check(9)" alt="Tree Image"></div>
+            <div class="col-sm-2"><img src="tree.jpg" id="img10" class="p1" onclick="check(10)" alt="Tree Image"></div>
+            <div class="col-sm-2"><img src="tree.jpg" id="img11" class="p1" onclick="check(11)" alt="Tree Image"></div>
         </div>
         <div class="row">
-            <div class="col-sm-2"><img src="tree.jpg" class="p1" alt="Bearcat Image"></div>
-            <div class="col-sm-2"><img src="tree.jpg" class="p1" alt="Bearcat Image"></div>
-            <div class="col-sm-2"><img src="tree.jpg" class="p1" alt="Bearcat Image"></div>
-            <div class="col-sm-2"><img src="tree.jpg" class="p1" alt="Bearcat Image"></div>
-            <div class="col-sm-2"><img src="tree.jpg" class="p1" alt="Bearcat Image"></div>
-            <div class="col-sm-2"><img src="tree.jpg" class="p1" alt="Bearcat Image"></div>
+            <div class="col-sm-2"><img src="tree.jpg" id="img12" class="p1" onclick="check(12)" alt="Tree Image"></div>
+            <div class="col-sm-2"><img src="tree.jpg" id="img13" class="p1" onclick="check(13)" alt="Tree Image"></div>
+            <div class="col-sm-2"><img src="tree.jpg" id="img14" class="p1" onclick="check(14)" alt="Tree Image"></div>
+            <div class="col-sm-2"><img src="tree.jpg" id="img15" class="p1" onclick="check(15)" alt="Tree Image"></div>
+            <div class="col-sm-2"><img src="tree.jpg" id="img16" class="p1" onclick="check(16)" alt="Tree Image"></div>
+            <div class="col-sm-2"><img src="tree.jpg" id="img17" class="p1" onclick="check(17)" alt="Tree Image"></div>
         </div>
         <div class="row">
-            <div class="col-sm-2"><img src="tree.jpg" class="p1" alt="Bearcat Image"></div>
-            <div class="col-sm-2"><img src="tree.jpg" class="p1" alt="Bearcat Image"></div>
-            <div class="col-sm-2"><img src="tree.jpg" class="p1" alt="Bearcat Image"></div>
-            <div class="col-sm-2"><img src="tree.jpg" class="p1" alt="Bearcat Image"></div>
-            <div class="col-sm-2"><img src="tree.jpg" class="p1" alt="Bearcat Image"></div>
-            <div class="col-sm-2"><img src="tree.jpg" class="p1" alt="Bearcat Image"></div>
+            <div class="col-sm-2"><img src="tree.jpg" id="img18" class="p1" onclick="check(18)" alt="Tree Image"></div>
+            <div class="col-sm-2"><img src="tree.jpg" id="img19" class="p1" onclick="check(19)" alt="Tree Image"></div>
+            <div class="col-sm-2"><img src="tree.jpg" id="img20" class="p1" onclick="check(20)" alt="Tree Image"></div>
+            <div class="col-sm-2"><img src="tree.jpg" id="img21" class="p1" onclick="check(21)" alt="Tree Image"></div>
+            <div class="col-sm-2"><img src="tree.jpg" id="img22" class="p1" onclick="check(22)" alt="Tree Image"></div>
+            <div class="col-sm-2"><img src="tree.jpg" id="img23" class="p1" onclick="check(23)" alt="Tree Image"></div>
         </div>
     </div>
+    <script>
+        var ids=["img0","img1","img2","img3","img4","img5","img6","img7","img8","img9","img10","img11","img12",
+        "img13","img14","img15","img16","img17","img18","img19","img20","img21","img22","img23"];
+        triesCount=0;
+        animalLocation=13
+        function check(position){
+            if(animalLocation==position){
+                var img_update=document.getElementById(ids[position]);
+                img_update.src="animal.jpg";
+                triesCount=triesCount+1;
+            }
+            else{
+                var img_update=document.getElementById(ids[position]);
+                img_update.src="plant.jpg";
+                triesCount=triesCount+1;
+            }
+            document.getElementById("tries").innerHTML = "Number of tries is " + triesCount
+            var dist=distance(position,animalLocation);
+            document.getElementById("distance").innerHTML = "Distance from onclick element to animalLocation (13) : " + dist
+        }
+        function distance(pos1,pos2){
+            var position=[[0, 1, 2, 3, 4, 5], [6, 7, 8, 9, 10, 11], [12, 13, 14, 15, 16, 17], [18, 19, 20, 21, 22, 23]];
+            for(i=0;i<position;i++){
+                for(j=0;j<position[i].length;j++){
+                    if(position[i][j]==pos1){
+                        vertical = i;
+                        horizontal = j;
+                    }
+                    if(position[i][j]==pos2){
+                        vertical1 = i;
+                        horizontal1 = j;
+                    }
+                }
+            }
+            return Math.max(Math.abs(vertical1 - vertical), Math.abs(horizontal1 - horizontal));
+        }
+    </script>
 </body>
 
 </html>
