--- a/reaction.html
+++ b/reaction.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>setTimeout use</title>
+  <title>Reaction Page</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -10,28 +10,29 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
-
-  <h2>Timeout - Red in 3 seconds</h2>
-
-  <button type="button"
-  class="btn btn-primary"
-  onclick="buttonPress2()">
-  Click me change the color.</button>
-  
-  <p id="target">I will become red </p>
-  
+<div class="container">
+  <h2><b>Rohith Sai Ganguru - <i>reaction timer</i></b></h2>
+  <p id="target">Your time</p>
+  <p id="countdown">Count</p>
+  <button type="button" class="btn btn-primary" onclick="startTime()">Start Timer</button>
+  <button type="button" class="btn btn-primary" onclick="recordReact()">React Now</button>
+</div>
   <script> 
-  function buttonPress1() {
-    setTimeout(function(){
-      document.getElementById('target').style.color = "red"
-    }, 3000)
+  myTime=undefined;
+  function recordReact() {
+    myTime = Date.now();
+    console.log(myTime);
   }
+//     setTimeout(function(){
+//       document.getElementById('target').style.color = "red"
+//     }, 3000)
+//   }
 
-  function buttonPress2() {
-    setTimeout(()=>{
-      document.getElementById('target').style.color = "red"
-    }, 3000)
-  }
+//   function buttonPress2() {
+//     setTimeout(()=>{
+//       document.getElementById('target').style.color = "red"
+//     }, 3000)
+//   }
   </script>
 
 </body>
