--- a/search.html
+++ b/search.html
@@ -81,7 +81,7 @@
         }
         function distance(pos1,pos2){
             var position=[[0, 1, 2, 3, 4, 5], [6, 7, 8, 9, 10, 11], [12, 13, 14, 15, 16, 17], [18, 19, 20, 21, 22, 23]];
-            for(i=0;i<position;i++){
+            for(i=0;i<position.length;i++){
                 for(j=0;j<position[i].length;j++){
                     if(position[i][j]==pos1){
                         vertical = i;
